--- a/src/app/create-form/create-form.component.html
+++ b/src/app/create-form/create-form.component.html
@@ -1,92 +1,131 @@
-<div class="container">
-    <div class="row centered-form">
-    <div class="col-xs-12 col-sm-8 col-md-4 col-sm-offset-2 col-md-offset-4">
-      <div class="panel panel-default" style="width: 235%;margin-left: -243px;">
-        <div class="panel-heading">
-          <h3 class="panel-title">Create the Feed Back form </h3>
-         </div>
-         <div class="panel-body">
-          <form role="form">
-            <div class="row">
-              <div class="col-xs-6 col-sm-6 col-md-6">
-                <div class="form-group">
-                    <mat-form-field>
-                        <input matInput [matDatepicker]="picker" placeholder="Choose a date" type="text" [value]="user">
-                        <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-                        <mat-datepicker #picker></mat-datepicker>
-                      </mat-form-field>
-                </div>
-              </div>
-              <div class="col-xs-6 col-sm-6 col-md-6">
-                <div class="form-group">
-                  <input type="text" name="clientOrganisation" id="clientOrg" #clientOrg ="ngModel" required ngModel class="form-control input-sm" placeholder="Client Organisation">
-                 <div *ngIf ="clientOrg.errors && (clientOrg.dirty || clientOrg.touched)" class="alert alert-danger">
-                   Please enter a value in client Organaisation
-                 </div>
-                </div>
-              </div>
-              <div class="col-xs-6 col-sm-6 col-md-6">
-                  <div class="form-group">
-                    <input type="text" name="scopeOfService" id="scope" #scope="ngModel" required ngModel class="form-control input-sm" placeholder="Scope Of Service">
-                    <div *ngIf ="scope.errors && (scope.dirty || scope.touched)" class="alert alert-danger">
-                      Please enter a value in Scope
-                    </div>
-                  </div>
-                </div>
+
+<mat-horizontal-stepper #stepper="matHorizontalStepper">
+  <mat-step [stepControl]="firstFormGroup">
+    <form [formGroup]="firstFormGroup">
+      <ng-template matStepLabel>Satisfaction Factors</ng-template>
+     
+        <!-- <input matInput placeholder="Last name, First name" formControlName="firstCtrl" required> -->
+        <ul class="list-group" *ngFor="let factor of satisfactionFactors">
+        <li class="list-group-item"><mat-checkbox >{{factor}}</mat-checkbox></li>
+        </ul>
+        <mat-paginator #paginator
+        [pageSize]="5"
+        [pageSizeOptions]="[5, 10, 20]">
+          </mat-paginator>
+        
+      
+      <div>
+        <button mat-button matStepperNext>Next</button>
+      </div>
+    </form>
+  </mat-step>
+  <mat-step [stepControl]="secondFormGroup">
+    <form [formGroup]="secondFormGroup">
+      <ng-template matStepLabel>Enter the details</ng-template>
+    <div style="width:80%;margin-left:50px;">  
+      <div class="row form-group">
+        <label for ="clientOrg">Client Organisation</label>
+            <select class="selectpicker" data-live-search="true" id="clientOrg" >
+            <option data-tokens="ketchup mustard" *ngFor ="let org of clientOrgs">{{org}}</option>        
+            </select>          
+         
+       </div>
+       <div class ="row">
+        <label for="clientContact"> Client Contact:</label>
+        <input type="text" class="form-control" id="clientContact">
+       </div>
+            <div class="row form-group">
+              <label for="scopeOfService">Scope Of Service:</label>
+              <input type="text" class="form-control" id="scopeOfService">
             </div>
-            <div class="row">
-                  <div class="col-xs-6 col-sm-6 col-md-6 form-group">
-                    <input type="text" name="clientContact" id="clientContact" #clientContact ="ngModel" required ngModel class="form-control input-sm" placeholder="Client Contact">
-                    <div *ngIf ="clientContact.errors && (clientContact.dirty || clientContact.touched)" class="alert alert-danger">
-                      Please enter the client Contact
-                    </div>
-                  </div>
+        
+
+            <div class ="form-group">
+              <label for="salesLead">Sales lead:</label>
+              <select class="selectpicker" data-live-search="true" id="salesLead" >
+                <option data-tokens="ketchup mustard" *ngFor ="let sale of salesLeads">{{sale}}</option>        
+                </select>
+            </div> 
+            <div class ="row form-group">
+              <label for="serviceDeliveryLead">Service Delivery lead</label>
+              <input type="text" class="form-control" id="scopeOfService">
+
+         
             </div>
 
-            <div class="row">
-              <div class="col-xs-6 col-sm-6 col-md-6">
-                <div class="form-group">
-                  <input type="text" name="ServiceLead" id="serviceLead" #serviceLead="ngModel" required ngModel class="form-control input-sm" placeholder="service Delivery lead">
-                  <div *ngIf ="serviceLead.errors && (serviceLead.dirty || serviceLead.touched)" class="alert alert-danger">
-                    Please enter the service lead
-                  </div>
-                </div>
-              </div>
-              <div class="col-xs-6 col-sm-6 col-md-6">
-                <div class="form-group">
-                  <input type="text" name="saleslead" id="salesLead" #salesLead ="ngModel" required ngModel class="form-control input-sm" placeholder="sales lead">
-                  <div *ngIf ="salesLead.errors && (salesLead.dirty || salesLead.touched)" class="alert alert-danger">
-                    Please enter the sales lead
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-xs-6 col-sm-6 col-md-6">
-                  <div class="form-group">
-                      <div class="dropdown">
-                          <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-                            Dropdown
-                            <span class="caret"></span>
-                          </button>
-                          <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-                            <li><a href="#">Action</a></li>
-                            <li><a href="#">Another action</a></li>
-                            <li><a href="#">Something else here</a></li>
-                            <li role="separator" class="divider"></li>
-                            <li><a href="#">Separated link</a></li>
-                          </ul>
-                        </div>
-                    </div>
-              </div>
-              <div class="col-xs-6 col-sm-6 col-md-6">
-                  <div class="input-group">                    
-                      <input type="text" class="form-control" placeholder="factor1" aria-describedby="sizing-addon2">
-                    </div>
-              </div>
+      </div>
+             
+      <div class="row" style="margin-left:50px">
+        <button mat-button matStepperPrevious>Back</button>
+        <button mat-button matStepperNext>Next</button>
+      </div>
+    </form>
+  </mat-step>
+  <mat-step>
+    <ng-template matStepLabel>Final Form</ng-template>
 
-            </div>
-            <div class="row">
+    <div class="container">
+      <div class="row centered-form">
+      <div class="col-xs-12 col-sm-8 col-md-4 col-sm-offset-2 col-md-offset-4">
+        <div class="panel panel-default" style="width: 235%;margin-left: -243px;">
+        
+           
+            <form role="form">
+              <div class="row">
+                <div class="col-xs-6 col-sm-6 col-md-6">
+                  <div class="form-group">
+                      <mat-form-field>
+                          <input matInput [matDatepicker]="picker" placeholder="Choose a date" type="text" [value]="user">
+                          <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+                          <mat-datepicker #picker></mat-datepicker>
+                        </mat-form-field>
+                  </div>
+                </div>
+                <div class="col-xs-6 col-sm-6 col-md-6">
+                  <div class="form-group">
+                    <input type="text" name="clientOrganisation" id="clientOrg" #clientOrg ="ngModel" required ngModel class="form-control input-sm" placeholder="Client Organisation">
+                   <div *ngIf ="clientOrg.errors && (clientOrg.dirty || clientOrg.touched)" class="alert alert-danger">
+                     Please enter a value in client Organaisation
+                   </div>
+                  </div>
+                </div>
+                <div class="col-xs-6 col-sm-6 col-md-6">
+                    <div class="form-group">
+                      <input type="text" name="scopeOfService" id="scope" #scope="ngModel" required ngModel class="form-control input-sm" placeholder="Scope Of Service">
+                      <div *ngIf ="scope.errors && (scope.dirty || scope.touched)" class="alert alert-danger">
+                        Please enter a value in Scope
+                      </div>
+                    </div>
+                  </div>
+              </div>
+              <div class="row">
+                    <div class="col-xs-6 col-sm-6 col-md-6 form-group">
+                      <input type="text" name="clientContact" id="clientContact" #clientContact ="ngModel" required ngModel class="form-control input-sm" placeholder="Client Contact">
+                      <div *ngIf ="clientContact.errors && (clientContact.dirty || clientContact.touched)" class="alert alert-danger">
+                        Please enter the client Contact
+                      </div>
+                    </div>
+              </div>
+  
+              <div class="row">
+                <div class="col-xs-6 col-sm-6 col-md-6">
+                  <div class="form-group">
+                    <input type="text" name="ServiceLead" id="serviceLead" #serviceLead="ngModel" required ngModel class="form-control input-sm" placeholder="service Delivery lead">
+                    <div *ngIf ="serviceLead.errors && (serviceLead.dirty || serviceLead.touched)" class="alert alert-danger">
+                      Please enter the service lead
+                    </div>
+                  </div>
+                </div>
+                <div class="col-xs-6 col-sm-6 col-md-6">
+                  <div class="form-group">
+                    <input type="text" name="saleslead" id="salesLead" #salesLead ="ngModel" required ngModel class="form-control input-sm" placeholder="sales lead">
+                    <div *ngIf ="salesLead.errors && (salesLead.dirty || salesLead.touched)" class="alert alert-danger">
+                      Please enter the sales lead
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="row">
                 <div class="col-xs-6 col-sm-6 col-md-6">
                     <div class="form-group">
                         <div class="dropdown">
@@ -186,12 +225,44 @@
                       </div>
         
                     </div>
-            
-            <input type="submit" value="submit" class="btn btn-info btn-block">
+                    <div class="row">
+                        <div class="col-xs-6 col-sm-6 col-md-6">
+                            <div class="form-group">
+                                <div class="dropdown">
+                                    <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                                      Dropdown
+                                      <span class="caret"></span>
+                                    </button>
+                                    <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+                                      <li><a href="#">Action</a></li>
+                                      <li><a href="#">Another action</a></li>
+                                      <li><a href="#">Something else here</a></li>
+                                      <li role="separator" class="divider"></li>
+                                      <li><a href="#">Separated link</a></li>
+                                    </ul>
+                                  </div>
+                              </div>
+                        </div>
+                        <div class="col-xs-6 col-sm-6 col-md-6">
+                            <div class="input-group">                    
+                                <input type="text" class="form-control" placeholder="factor1" aria-describedby="sizing-addon2">
+                              </div>
+                        </div>
           
-          </form>
+                      </div>
+              
+              <input type="submit" value="submit" class="btn btn-info btn-block">
+            
+            </form>
+          
         </div>
       </div>
     </div>
   </div>
-</div>
+    
+    <div >
+      <button mat-button matStepperPrevious>Back</button>
+      <button mat-button (click)="stepper.reset()">Reset</button>
+    </div>
+  </mat-step>
+</mat-horizontal-stepper>
